--- a/src/main/resources/com/cyt/os/view/Process.fxml
+++ b/src/main/resources/com/cyt/os/view/Process.fxml
@@ -52,7 +52,7 @@
                         </MenuItem>
                     </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="更多(M)">
+                <Menu fx:id="moreBar" mnemonicParsing="false" text="更多(M)">
                     <graphic>
                         <FontIcon fill="black" iconLiteral="fa-ellipsis-h" />
                     </graphic>
@@ -62,7 +62,7 @@
                                 <FontIcon fill="black" iconLiteral="fa-bank" />
                             </graphic>
                         </MenuItem>
-                        <MenuItem mnemonicParsing="false" text="分配回收">
+                        <MenuItem mnemonicParsing="false" text="随机请求I/O">
                             <graphic>
                                 <FontIcon fill="black" iconLiteral="fa-recycle" />
                             </graphic>
